2006-03-19  Tom Tromey  <tromey@redhat.com>

	* java/awt/font/NumericShaper.java: Rewrote.

2006-03-19  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/plaf/basic/BasicTableUI.java:
	Implement MouseWheelListener. (ROWS_PER_WHEEL_CLICK):
	New field. MouseInputHandler.mouseWheelMoved): New method.
	(installListeners): Register MouseInputHandler as
	wheel listener also.
	
2006-03-19  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	PR 26746
	* javax/swing/ViewportLayout.java (layoutContainer):
	If Scrollable tracks dimension, set view size to the port size. 
	If port is larger than the view, move the view to the top/left.

2006-03-18  Roman Kennke  <kennke@aicas.com>

	* javax/swing/MenuSelectionManager.java
	(isComponentPartOfCurrentMenu): Also consider the first element
	in a menu selection list. Make a isDescendentFrom check instead
	of simple equals to also catch sub components.

2006-03-18  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComboBox.java
	(actionPerformed): Fetch selected item directly from the editor
	instead of trying to get it from the event.

2006-03-18  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicComboBoxEditor.java
	(listener): Removed field.
	(BasicComboBoxEditor): Removed initialization of listener field.
	(addActionListener): Add listener directly to editor.
	(removeActionListener): Remove listener directly from editor.
	(ComboBoxEditorListener): Removed class.
	* javax/swing/plaf/basic/BasicComboBoxUI.java
	(getPreferredSize): Fixed to return the minimumSize.
	(getMinimumSize): Improved code for more clearness.
	(getMaximumSize): Return (32767,32767) as requested by the mauve test.
	(rectangleForCurrentValue): Correctly respect insets.
	(getDefaultSize): Return preferredSize here. Dont override height
	with 100.
	(getDisplaySize): Moved around code for more clearness. Added
	handling of prototype renderer.
	(ComboBoxLayoutManager.layoutContainer): Set editor bounds after